[package]
name = "hft-simulator"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.4.0"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
log = "0.4"
ordered-float = "3.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
slab = "0.4"
rust_decimal = { version = "1.36", features = ["serde", "db-postgres", "legacy-ops"] }
rust_decimal_macros = "1.36"
thiserror = "1.0"          # Structured error handling
env_logger = "0.11.3"     # Logging infrastructure
metrics = "0.21.1"        # Metrics foundation
dotenv = "0.15.0"
parking_lot = "0.12.1"
num-traits = "0.2.17"